add entrance info

--- a/DSB2026/DSB2026.md
+++ b/DSB2026/DSB2026.md
@@ -10,24 +10,30 @@ image: "piazzasm.jpg"
   .hero .hero-text-container {
     width: 100% !important; 
     text-align: left;
-}
+  }
 
-.hero .inner-hero {
-    align-items: start !important;
-    top: 100px !important;
-}
+  .hero .inner-hero {
+      align-items: start !important;
+      top: 100px !important;
+  }
+
+  customStrong {
+    font-weight: bold !important;
+  }
 </style>
 
 
 ## Where and when
 
-DSB 2026 will take place at [Aula Magna Silvio Trentin](https://www.unive.it/pag/31150/), [Ca' Foscari University of Venice](https://www.unive.it/web/en/497/home), Venice, Italy on **February 18-19, 2026**.  
+DSB 2026 will take place at [Aula Magna Silvio Trentin](https://www.unive.it/pag/31150/), [Ca' Foscari University of Venice](https://www.unive.it/web/en/497/home), Venice, Italy on **February 18-19, 2026**. <customStrong><em>The entrance to the building is through Giardino di Ca’ Dolfin</em></customStrong>.  
 • <small>Opening: February 18, 8:30–8:45</small>  
 • <small>Closing: February 19, 17:50–18:00</small>
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d479.23971981047174!2d12.325710862267028!3d45.43510351758851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eb1735b0a0133%3A0x8daeee83f6c15b4c!2sGiardino%20di%20Ca%E2%80%99%20Dolfin!5e1!3m2!1sen!2sit!4v1761556482418!5m2!1sen!2sit" width="100%" height="400" style="border:0;margin-bottom:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-
+<!--
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9360.59882355841!2d12.321188403211007!3d45.437693960916135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eb1cf4046f745%3A0x5eba211ce81fa5bf!2sAula%20magna%20Silvio%20Trentin!5e0!3m2!1sit!2sit!4v1755727841052!5m2!1sit!2sit" width="100%" height="400" style="border:0;margin-bottom:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+-->
 
 ## How to participate
 
