add forms and raven logo

--- a/DSB2026/DSB2026.md
+++ b/DSB2026/DSB2026.md
@@ -37,9 +37,9 @@ DSB 2026 will take place at [Aula Magna Silvio Trentin](https://www.unive.it/pag
 
 ## How to participate
 
-**Abstract submission deadline:** To be announced.
+**Abstract submission deadline:** January 2nd, 2026 AoE. [Click here to reach the abstract submission form](https://forms.gle/baHkDCZW1Lvx1xZT6).
 
-**Registration deadline:** To be announced.
+**Registration deadline:** January 31st, 2026 AoE. [Click here to reach the registration form]( https://forms.gle/V9yrUXYvAsTPpq6J7).
 
 As in previous editions, there will be no formal review process. While we aim to provide everyone with an opportunity to present, the organizers reserve the right to select talks from the submissions to ensure a diverse and engaging program.
 
@@ -47,6 +47,29 @@ For this edition, there will be no registration fee.
 
 
 ## Organizers
+
+<style>
+@media (min-width: 778px) {
+  .adj-bottom-margin {
+    margin-bottom: -60px;
+  }
+}
+@media (min-width: 228px) and (max-width: 777px) {
+  .adj-bottom-margin {
+    margin-bottom: -25px;
+  }
+}
+</style>
+
+<!--<div style="display: flex; align-items: center; margin-bottom: -40px; margin-top: -5px;">-->
+<div class="adj-bottom-margin" style="display: flex;">
+  <p> 
+    DSB 2026 is organized by the 
+    <a href="https://raven-laboratory.github.io/">RAVEN</a> 
+    (Research on Algorithms VENice) research group at Ca' Foscari University of Venice.
+  </p>
+   <img src="./raven_logo-01.png" alt="RAVEN" style="height: 150px;">
+</div>
 
 - Nicola Prezza, Ca' Foscari University of Venice
 - Ruben Becker, Ca' Foscari University of Venice
