--- a/DSB2026/DSB2026.md
+++ b/DSB2026/DSB2026.md
@@ -37,7 +37,7 @@ DSB 2026 will take place at [Aula Magna Silvio Trentin](https://www.unive.it/pag
 
 ## How to participate
 
-**Abstract submission deadline:** January 2nd, 2026 AoE. [Click here to reach the abstract submission form](https://forms.gle/baHkDCZW1Lvx1xZT6).
+**Abstract submission deadline:** ~~January 2nd~~ January 9th, 2026 AoE. [Click here to reach the abstract submission form](https://forms.gle/baHkDCZW1Lvx1xZT6).
 
 **Registration deadline:** January 31st, 2026 AoE. [Click here to reach the registration form]( https://forms.gle/V9yrUXYvAsTPpq6J7).
 
