--- a/DSB2026/DSB2026.md
+++ b/DSB2026/DSB2026.md
@@ -104,7 +104,7 @@ For this edition, there will be no registration fee.
 
 | <nobr>              </nobr> | **Session 6: Comparative Genomics 2**  ( Chair: TBA )  |
 | <nobr> 10:45 - 11:10</nobr> | Jorge Avila Cartes, Simone Ciccolella, Luca Denti, Raghuram Dandinasivara, Gianluca Della Vedova, Paola Bonizzoni, <ins><i>Alexander Schönhuth</i></ins>. *PanSpace: Fast and Scalable Indexing for Massive Bacterial Databases* |
-| <nobr> 11:10 - 11:35</nobr> | <ins><i>Jasmijn Baaijens</i></ins>. *Less is more: optimal reference set selection with ReSeT* |
+| <nobr> 11:10 - 11:35</nobr> | Jasper van Bemmelen, <ins><i>Jasmijn Baaijens</i></ins>. *Less is more: optimal reference set selection with ReSeT* |
 | <nobr> 11:35 - 12:00</nobr> | <ins><i>Daniel Puttini</i></ins>, Ruben Becker, Nicola Prezza, Sung-Hwan Kim, Davide Cenzato. *A near-optimal algorithm for the Wheelerization problem with applications to computational pangenomics* |
 | <nobr> 12:00 - 12:25</nobr> | <ins><i>Alessio Campanelli</i></ins>, Giulio Ermanno Pibiri, Rob Patro. *Fast pseudoalignment queries on compressed colored de Bruijn graphs* |
 
